# human-ai-framework

./: .gitignore  .haif-settings.toml  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  TASKS.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
config/: default.yaml  development.yaml  production.yaml  testing.yaml
docs/: index.md
src/human_ai_framework/: __init__.py  __main__.py  cli.py
src/human_ai_framework/core/: factory.py  framework.py
src/human_ai_framework/models/: interaction.py
src/human_ai_framework/services/: base.py  framework_service.py  registry.py
src/human_ai_framework/utils/: config.py  logging.py
tests/integration/: test_framework_service.py  test_full_workflow.py
tests/unit/: test_factory.py  test_framework.py  test_models.py
